--- a/des157b/studio3/profile-styles.css
+++ b/des157b/studio3/profile-styles.css
@@ -34,6 +34,11 @@ main {
 }
 
 /*********************** Left Section ***********************/
+
+#left {
+    width: 30%;
+}
+
 #profile-container {
     display: flex;
     flex-direction: column;
@@ -86,6 +91,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 70%;
 }
 
 #right.hidden {
@@ -98,6 +104,7 @@ button:hover {
     align-items: flex-start;
     flex-direction: column;
     gap: 20px;
+    overflow: scroll;
 }
 
 #quote-controller {
@@ -125,6 +132,8 @@ button:hover {
 #author {
     font-size: 1.5em;
     font-weight: 100;
+    text-decoration: none;
+    color: aliceblue;
 }
 
 #saved-quotes {
@@ -136,6 +145,11 @@ button:hover {
     padding: 50px 50px;
     height: 100%;
     background-color: lightslategray;
+    overflow-y: scroll;
+}
+
+#saved-quotes.hidden {
+    display: none;
 }
 
 .quotes-box {
@@ -152,4 +166,6 @@ button:hover {
 .authors {
     font-size: 1em;
     font-weight: 100;
+    text-decoration: none;
+    color: lightslategray;
 }
