--- a/des157b/styles.css
+++ b/des157b/styles.css
@@ -14,13 +14,14 @@ body.switch {
 
 #container {
     position: relative;
-    width: 100%;
-    max-width: 1366px;
-    min-width: 900px;
+    width: 100vw;
+    height: 100vh;
+    /* max-width: 1366px;
+    min-width: 900px; */
     margin: 0 auto;
     display: grid;
     grid-template-columns: 35vw 55vw 10vw;
-    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 /******************************* The Side *******************************/
@@ -32,7 +33,8 @@ body.switch {
     position: sticky;
     top: 0;
     left: 0;
-    height: 768px;
+    height: 100vh;
+    max-width: 35vw;
     background-color: rgb(216, 115, 115);
     animation-name: changing-background-light;
     animation-duration: 8s;
@@ -212,13 +214,14 @@ button.switch:hover {
 main {
     background-color: #fff;
     display: flex;
+    flex-wrap: wrap;
     gap: 2em;
     justify-content: center;
     margin: 0 auto;
     padding: 0 3em;
     grid-column: 2/4;
     overflow-x: scroll;
-    height: 768px;
+    height: 100vh;
     transition: 500ms ease-in-out;
 }
 
@@ -229,10 +232,14 @@ main section {
     justify-content: flex-start;
     background-color: #f1f1f1;
     border-radius: 15px;
-    width: 30vw;
-    margin: 10vh .25em ;
+    width: 350px;
+    margin: 10vh .25em;
     padding: 2em 1em;
-    
+}
+
+main section:first-child, main section:nth-child(2) {
+    margin-top: 10vh;
+    margin-bottom: 0;
 }
 
 section nav {
